# OpenSignal

./: .gitignore  Cargo.toml  README.md  build.rs  code.rs  flake.nix  icons.gresource.xml  lib.rs  main.blp  main.css  main.rs  settings
icons/: index.theme
