[package]
name = "opensignal"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.2.0"
gtk-blueprint = "0.2.0"
image = "0.25.6"
libc = "0.2"
phf = "0.11.3"
qrc = "0.0.5"
rand = "0.8.5"
rusqlite = { version = "0.35.0", features = ["bundled-sqlcipher"] }
serde_json = "1.0.140"
shellexpand = "3.1.1"
toml = "0.8.22"
url = "2.5.0"
which = "7.0.3"

[dependencies.soup3]
version = "0.6.0"
features = ["v3_4"]

[dependencies.webkit6]
version = "0.3.0"
features = ["v2_42"]

[dependencies.gtk]
version = "0.8.1"
package = "gtk4"
features = ["gnome_46"]

[dependencies.adw]
version = "0.6.0"
package = "libadwaita"
features = ["v1_5"]

[dependencies.ashpd]
version = "0.8.1"
features = ["gtk4"]

[dependencies.shumate]
version = "0.5.0"
package = "libshumate"
features = ["v1_2"]

[[bin]]
name = "opensignal"
path = "main.rs"
required-features = ["binary"]

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[features]
default = []
binary = []

[build-dependencies]
glib-build-tools = "0.20.0"
